-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.4.0
-
None
-
Windows MSVC2012+
The following config line should allow building Qt for Windows with dynamic OpenGL and ANGLE's D3D11 renderer:
configure -angle-d3d11 -opengl dynamic
However, that config line will give the following error:
ERROR: Dynamic OpenGL cannot be used together with native Angle (GLES2) builds.
Note that WinRT builds should still prevent that combination, as dynamic GL is not supported under WinRT.
For Gerrit Dashboard: QTBUG-40193 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
90551,4 | Enable building ANGLE with D3D11 in -opengl dynamic builds. | dev | qt/qtbase | Status: MERGED | +2 | 0 |