Enable building ANGLE with D3D11 in -opengl dynamic builds.

Task-number: QTBUG-40193
Change-Id: If70943355d650cd3f20f4ff25fa09417a28a2b93
Reviewed-by: Andrew Knight <andrew.knight@digia.com>

cregit: 6a802158597ae8b58b8c8304465f62b5b02ce9ce https://github.com/qt/qtbase/commit/6a802158597ae8b58b8c8304465f62b5b02ce9ce